--- a/Food Info/package.json
+++ b/Food Info/package.json
@@ -4,10 +4,11 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
+    "start": "node index.js",         
+    "dev": "nodemon index.js",         
+    "build": "vite build",             
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview"         
   },
   "dependencies": {
     "axios": "^1.7.7",
