--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-CALORIENINJAS_API_KEY="0S3tnIX82GmJZocmC72OUA==BXqW47D6hZxAcROy"
-GENIE_API_KEY="AIzaSyBZd2z4MrtmGWwW0c5lq60icZTPj5nxTC8"
-YOUTUBE_API_KEY="AIzaSyCmGMqBWPd684cFCKL4kVsV4fEZR0xmg2Y"
+REACT_APP_CALORIENINJAS_API_KEY="0S3tnIX82GmJZocmC72OUA==BXqW47D6hZxAcROy"
+REACT_APP_GENIE_API_KEY="AIzaSyBZd2z4MrtmGWwW0c5lq60icZTPj5nxTC8"
+REACT_APP_YOUTUBE_API_KEY="AIzaSyCmGMqBWPd684cFCKL4kVsV4fEZR0xmg2Y"
 
 
